--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 
       </header>
       <section>
-        <h3>Chapter {{page.section}}, {{ page.title }}</h3>
+        <h3>{{ page.title }}</h3>
         {{ content }}
       </section>
       <footer>
