--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,10 +18,12 @@
       <header>
         <h1 class="header">{{page.title}}</h1>
         <p class="header">
-          Overheard, A Ruby Client-Server Application by <a
+          A Gentle, Illustrated Guide to building Web Applications in Ruby by <a
           href="http://codeunion.io/">Codeunion</a></p>
 
         <ul>
+          <li><a href="/a-gentle-introduction-to-computer-programming">A Gentle
+          Introduction to Computer Programming</a></li>
           <li><a class="buttons github" href="https://github.com/codeunion/overheard-guide">View On GitHub</a></li>
         </ul>
 
