--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>{{ page.title }}</title>
 
-    <link rel="stylesheet" href="/stylesheets/styles.css">
-    <link rel="stylesheet" href="/stylesheets/pygment_trac.css">
-    <script src="/javascripts/scale.fix.js"></script>
+    <link rel="stylesheet" href="stylesheets/styles.css">
+    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
+    <script src="javascripts/scale.fix.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -22,7 +22,7 @@
           href="http://codeunion.io/">Codeunion</a></p>
 
         <ul>
-          <li><a href="/a-gentle-introduction-to-computer-programming">A Gentle
+          <li><a href="/a-gentle-introduction-to-computer-programming.html">A Gentle
           Introduction to Computer Programming</a></li>
           <li><a class="buttons github" href="https://github.com/codeunion/overheard-guide">View On GitHub</a></li>
         </ul>
